<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abdulrahman.project3udacity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="quiz"
                android:gravity="center"
                android:textSize="25sp"
                android:padding="8dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Please enter your name "
                android:id="@+id/name"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1"
                    android:textSize="18dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1_hint"
                    />
            </LinearLayout>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java"
                android:paddingLeft="10dp"
                android:id="@+id/java"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:paddingLeft="10dp"
                android:id="@+id/Csharp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_answer"
                android:paddingLeft="10dp"
                android:id="@+id/C"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/Q2"
                android:layout_margin="8dp"
                />
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/paris"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Q2_answer"
                >
                <RadioButton
                    android:id="@+id/parice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/parice"
                    android:paddingLeft="10dp"
                    />
                <RadioButton
                    android:id="@+id/lasvegas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/las_vegas"
                    android:paddingLeft="10dp"
                    />
                <RadioButton
                    android:id="@+id/moscow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/moscow"
                    android:paddingLeft="10dp"
                    />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/Q3"
                android:layout_margin="8dp"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Q3_answer"
                >
                <RadioButton
                    android:id="@+id/KohimaNagaland"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kohima_nagaland"
                    android:paddingLeft="10dp"
                    />
                <RadioButton
                    android:id="@+id/DiphuAssam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diphu_assam"
                    android:paddingLeft="10dp"
                    />
                <RadioButton
                    android:id="@+id/JunagarhGujarat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/junagarh_gujarat"
                    android:paddingLeft="10dp"
                    />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/Q4"
                android:layout_margin="8dp"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Q4_answer"
                >
                <RadioButton
                    android:id="@+id/an1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_30000000"
                    android:paddingLeft="10dp"
                    />
                <RadioButton
                    android:id="@+id/an2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_25000000"
                    android:paddingLeft="10dp"
                    />
                <RadioButton
                    android:id="@+id/an3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_2000000"
                    android:paddingLeft="10dp"
                    />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/Q5"
                android:layout_margin="8dp"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Q5_answer"
                >
                <RadioButton
                    android:id="@+id/Milan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/milan"
                    android:paddingLeft="10dp"
                    />
                <RadioButton
                    android:id="@+id/Rome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rome"
                    android:paddingLeft="10dp"
                    />
                <RadioButton
                    android:id="@+id/Bologna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bologna"
                    android:paddingLeft="10dp"
                    />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/Q6"
                android:layout_margin="8dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/math"
                android:layout_margin="10dp"
                android:hint="@string/answer_her"
                android:ems="10"
                android:inputType="number"
                />



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center"
                android:onClick="butSubnit"
                />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
